force-app/main/default/objects/Invoice__c/fields/BankAccountId__c.field-meta.xml
<CustomField>
    <fullName>BankAccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CC Bank Account</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>