force-app/main/default/objects/Invoice__c/fields/Billing_EventId__c.field-meta.xml
<CustomField>
    <fullName>Billing_EventId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Event</label>
    <referenceTo>pse__Billing_Event__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>