force-app/main/default/objects/Invoice__c/fields/BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>BillingCountry__c</fullName>
    <label>Billing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>