force-app/main/default/objects/Invoice__c/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <label>Discount Amount</label>
    <summarizedField>InvoiceLine__c.DiscountAmount__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.InvoiceId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>