force-app/main/default/objects/Invoice__c/fields/N_Transaccion__c.field-meta.xml
<CustomField>
    <fullName>N_Transaccion__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Campo para importación facturas actuales</description>
    <externalId>true</externalId>
    <label>Nº Transacción</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>