force-app/main/default/objects/Invoice__c/fields/NetAmountWithoutWithholding__c.field-meta.xml
<CustomField>
    <fullName>NetAmountWithoutWithholding__c</fullName>
    <label>Net Amount Without Withholding</label>
    <summarizedField>InvoiceLine__c.NetAmount__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.InvoiceId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>