force-app/main/default/objects/Invoice__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <summarizedField>InvoiceLine__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.InvoiceId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>