force-app/main/default/objects/Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>TSS</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>COA</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>SLL</fullName>
            </value>
            <value>
                <fullName>CN</fullName>
            </value>
            <value>
                <fullName>FC</fullName>
                <label>FCO</label>
            </value>
            <value>
                <fullName>NOM</fullName>
            </value>
            <value>
                <fullName>CNTSS</fullName>
            </value>
            <value>
                <fullName>CNCOA</fullName>
            </value>
            <value>
                <fullName>TFR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>