force-app/main/default/objects/Invoice__c/fields/Withholding__c.field-meta.xml
<CustomField>
    <fullName>Withholding__c</fullName>
    <label>Withholding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>