force-app/main/default/objects/Invoice__c/fields/WithholdingAmount__c.field-meta.xml
<CustomField>
    <fullName>WithholdingAmount__c</fullName>
    <formula>NetAmountWithoutWithholding__c * Withholding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withholding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>