force-app/main/default/objects/Invoice__c/validationRules/You_have_to_define_Invoice_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>You_have_to_define_Invoice_Date</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Type__c,&apos;&apos;) || ISBlank(InvoiceDate__c)) &amp;&amp; ISPICKVAL(Status__c, &apos;Completed&apos;)</errorConditionFormula>
    <errorMessage>&quot;Type&quot; and &quot;Invoice date&quot; is required to change status to &quot;Completed&quot;</errorMessage>
</ValidationRule>