force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>Reference__c</columns>
    <columns>Status__c</columns>
    <columns>AccountId__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>PaymentStatus__c</columns>
    <columns>AmountPaid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>