force-app/main/default/objects/Invoice__c/listViews/Gastos.listView-meta.xml
<ListView>
    <fullName>Gastos</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>AmountPaid__c</columns>
    <columns>BankAccountId__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Notes__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>VATNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InvoiceDate__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>FC</value>
    </filters>
    <label>Gastos THIS YEAR</label>
</ListView>